# role_based_portal

./: MANIFEST.in  README.md  license.txt  pyproject.toml
role_based_portal/: __init__.py  auth.py  hooks.py  install.py
role_based_portal/config/: role_based_portal.py
role_based_portal/doctype/work_update/: work_update.json  work_update.py
role_based_portal/page/business_dashboard/: business_dashboard.js  business_dashboard.json
role_based_portal/page/common_dashboard/: common_dashboard.js  common_dashboard.json
role_based_portal/page/influencer_dashboard/: influencer_dashboard.js  influencer_dashboard.json
role_based_portal/public/: build.json
role_based_portal/public/css/: role_based_portal.css
role_based_portal/public/js/: role_based_portal.js
